# swi_prolog

./: Cargo.toml  README.md  build.rs
src/: data.rs  engine.rs  frame.rs  functor.rs  lib.rs  module.rs  predicate.rs  query.rs  swi_prolog.rs
src/bindings/: mod.rs  sys.rs  sys2.rs
src/logger/: env_logger.rs  mod.rs
src/term/: mod.rs  term_refs.rs
src/test/: mod.rs  test_file.pl
