[package]
name = "swi_prolog"
version = "0.1.0"
authors = ["Uniformbuffer <uniformbuffer@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["rt","rt-multi-thread","macros"] }
lazy_static = "*"

#[build-dependencies]
#bindgen = "*"

[lib]
doctest = false
